--- a/Tools/Electric.html
+++ b/Tools/Electric.html
@@ -78,99 +78,99 @@
     
     <hr>
 
-    <!-- CORVETTE -->
+    <!-- BMW I4 -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="300px">
+                <img src="./pics/Electric/BMW i4 M50.jpg" alt="I4 M50 pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Chevrolet</p>
-                <p><span class="key2">Model:</span> Corvette</p>
-                <p><span class="key3">Year:</span> 1953 - Present</p>
-                <p><span class="key4">Engine:</span> Powerful V8</p>
-                <p><span class="key5">Cost:</span> $60,000 to over $100,000</p>
+                <p><span class="key1">Brand:</span> BMW</p>
+                <p><span class="key2">Model:</span> I4 M50</p>
+                <p><span class="key3">Year:</span> Introduced in 2021</p>
+                <p><span class="key4">Engine:</span> Sporty design, powerful electric drivetrain</p>
+                <p><span class="key5">Cost:</span> $60,000 to $70,000+</p>
                 <p><span class="key6">Performance:</span> Impressive acceleration, top speed, and handling</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The Corvette, a legendary American icon, epitomizes performance and style with its sleek design and powerful V8 engine, offering a thrilling driving experience like no other. With its heritage of speed and innovation, the Corvette continues to captivate enthusiasts worldwide, embodying the spirit of automotive excellence.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A thrilling blend of electrifying performance and iconic BMW M engineering, setting a new standard for electric driving excitement. With its dynamic design and powerful electric drivetrain, the i4 M50 delivers instant acceleration and agile handling. From its luxurious interior to its advanced technology features, every detail of the i4 M50 is meticulously crafted for an unparalleled driving experience. Whether navigating city streets or carving through winding roads, the BMW i4 M50 embodies the spirit of electric performance, proving that sustainability can be thrilling.</p>
     </div>
 
-    <!-- R35 GTR -->
+    <!-- SPECTRE -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="R35 pic" height="300px">
+                <img src="./pics/Electric/Rolls Royce Spectre.jpg" alt="Spectre pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Nissan</p>
-                <p><span class="key2">Model:</span> R35 GT-R</p>
-                <p><span class="key3">Year:</span> Introduced in 2007, various iterations up to present</p>
-                <p><span class="key4">Engine:</span> Twin-turbocharged V6</p>
-                <p><span class="key5">Cost:</span> $100,000 to $200,000+</p>
-                <p><span class="key6">Performance:</span> Exceptional acceleration, 0-60 mph in under 3s</p>
+                <p><span class="key1">Brand:</span> Rolls Royce</p>
+                <p><span class="key2">Model:</span> Spectre</p>
+                <p><span class="key3">Year:</span> Introduced in 2023</p>
+                <p><span class="key4">Engine:</span> Electric motor	2X BMW eDrive</p>
+                <p><span class="key5">Cost:</span> $420,000+</p>
+                <p><span class="key6">Performance:</span> Cutting-edge technology for remarkable top speed</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The R35 GT-R stands as a testament to Japanese automotive ingenuity, blending futuristic design cues with relentless V6 power to redefine the supercar landscape. With its iconic presence and uncompromising performance, the GT-R continues to captivate enthusiasts worldwide, symbolizing a fusion of innovation and raw driving exhilaration.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A visionary masterpiece of automotive opulence and technological sophistication, redefining the concept of luxury travel. With its breathtaking design and unparalleled attention to detail, the Spectre exudes presence and prestige like no other. From its whisper-quiet electric powertrain to its sumptuous interior appointed with the finest materials, every aspect of the Spectre is a testament to Rolls-Royce's commitment to perfection.</p>
     </div>
 
-    <!-- SUPRA -->
+    <!-- EV6 -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/supra.jpg" alt="Supra pic" height="300px">
+                <img src="./pics/Electric/KIA EV6.jpg" alt="EV6 pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Toyota</p>
-                <p><span class="key2">Model:</span> GR Supra</p>
-                <p><span class="key3">Year:</span> Reintroduced in 2019 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged inline-six cylinder</p>
+                <p><span class="key1">Brand:</span> KIA</p>
+                <p><span class="key2">Model:</span> EV6</p>
+                <p><span class="key3">Year:</span> Introduced in 2021</p>
+                <p><span class="key4">Engine:</span> Fully electric, impressive range and performance</p>
                 <p><span class="key5">Cost:</span> $40,000 to $60,000+</p>
-                <p><span class="key6">Performance:</span> Agile handling, 0-60 mph in under 4s</p>
+                <p><span class="key6">Performance:</span> Long-range capability, smooth driving experience</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The GR Supra embodies Toyota's racing legacy, marrying sleek aesthetics with turbocharged power to deliver an electrifying driving experience. With its lineage rooted in motorsport prowess and cutting-edge technology, the Supra redefines the sports car genre, captivating drivers with its dynamic performance and unmistakable presence on the road.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A revolutionary leap into the future of electric mobility, where sleek design meets cutting-edge technology for an electrifying driving experience. With its striking aesthetics and spacious interior, the EV6 redefines what it means to drive emission-free. Boasting rapid acceleration and an impressive range, every journey in the EV6 is not just eco-conscious but exhilarating. From its advanced driver assistance systems to its seamless connectivity features, the EV6 sets new standards for innovation and sustainability in the electric vehicle market, paving the way for a cleaner, greener tomorrow.</p>
     </div>
 
-    <!-- REVUELTO -->
+    <!-- MODEL S -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Revuelto.jpeg" alt="Ruvuelto pic" height="300px">
+                <img src="./pics/Electric/Tesla Model S.jpg" alt="TESLA pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Lamboghini</p>
-                <p><span class="key2">Model:</span> Lamborghini</p>
-                <p><span class="key3">Year:</span> 2023 - Present</p>
-                <p><span class="key4">Engine:</span> 6.5 L V12 Electric</p>
-                <p><span class="key5">Cost:</span> $608,358 avg</p>
-                <p><span class="key6">Performance:</span> Agile handling, high top speed capabilities</p>
+                <p><span class="key1">Brand:</span> Tesla</p>
+                <p><span class="key2">Model:</span> Model S</p>
+                <p><span class="key3">Year:</span> Introduced in 2012, various iterations up to present</p>
+                <p><span class="key4">Engine:</span>  Fully electric, with Single-motor or dual-motor</p>
+                <p><span class="key5">Cost:</span> $70,000 to $100,000+</p>
+                <p><span class="key6">Performance:</span> cutting-edge technology, Exhilarating acceleration</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A breathtaking fusion of Italian craftsmanship and raw power, this supercar commands attention with its striking design and exhilarating V10 engine. From its aerodynamic curves to its spine-tingling exhaust note, the Revuelto epitomizes automotive artistry, offering a thrilling driving experience that ignites the senses and leaves a lasting impression on all who behold it.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A groundbreaking symbol of electric innovation and cutting-edge technology, revolutionizing the automotive industry with its sleek design and zero-emission performance. With its blistering acceleration and long-range capability, the Model S delivers a driving experience like no other. From its minimalist yet luxurious interior to its advanced Autopilot features, every detail of the Model S is crafted to elevate the journey. Whether cruising on the open highway or navigating city streets, the Model S embodies Tesla's vision of sustainable transportation, proving that electric vehicles can be both practical and exhilarating.</p>
     </div>
 
-    <!-- PORSCHE -->
+    <!-- VOLVO -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Porsche 718.jpg" alt="Porsche pic" height="300px">
+                <img src="./pics/Electric/Volvo C40.jpg" alt="Vovlo pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Porsche</p>
-                <p><span class="key2">Model:</span> 718</p>
-                <p><span class="key3">Year:</span> 2016 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged flat-four cylinder</p>
-                <p><span class="key5">Cost:</span> $60,000 to $100,000+</p>
-                <p><span class="key6">Performance:</span> Strong acceleration, 0-60 mph in under 5s</p>
+                <p><span class="key1">Brand:</span> Volvo</p>
+                <p><span class="key2">Model:</span> C40</p>
+                <p><span class="key3">Year:</span> Introduced in 2021</p>
+                <p><span class="key4">Engine:</span> Fully electric, providing zero-emission driving</p>
+                <p><span class="key5">Cost:</span> $50,000 to $60,000+</p>
+                <p><span class="key6">Performance:</span> Advanced safety features, sustainable driving xp</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A true embodiment of precision engineering and iconic design, this sports car captivates with its dynamic performance and timeless silhouette. With its turbocharged powerplant and impeccable handling, the 718 delivers an exhilarating driving experience that defines the essence of Porsche's racing heritage. From the track to the open road, every moment behind the wheel of the 718 is a testament to automotive excellence and passion for driving</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A stunning expression of Scandinavian design and sustainable luxury, redefining the electric driving experience with its sleek aesthetics and advanced technology. With its distinctive coupe-like silhouette and eco-friendly powertrain, the C40 seamlessly blends style with environmental responsibility. From its minimalist yet luxurious interior to its innovative infotainment system, every aspect of the C40 is designed to enhance comfort and convenience. With Volvo's commitment to safety and sustainability at its core, the C40 represents a bold step towards a more sustainable future, proving that luxury and environmental consciousness can coexist harmoniously.</p>
     </div>
 
     
