--- a/Tools/Muscle.html
+++ b/Tools/Muscle.html
@@ -78,99 +78,99 @@
     
     <hr>
 
-    <!-- CORVETTE -->
+    <!-- Dodge -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="300px">
+                <img src="./pics/Muscle/Dodge.jpg" alt="Dodge pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Chevrolet</p>
-                <p><span class="key2">Model:</span> Corvette</p>
-                <p><span class="key3">Year:</span> 1953 - Present</p>
-                <p><span class="key4">Engine:</span> Powerful V8</p>
-                <p><span class="key5">Cost:</span> $60,000 to over $100,000</p>
-                <p><span class="key6">Performance:</span> Impressive acceleration, top speed, and handling</p>
+                <p><span class="key1">Brand:</span> Dodge</p>
+                <p><span class="key2">Model:</span> Challenger SRT</p>
+                <p><span class="key3">Year:</span> 2008 - Present</p>
+                <p><span class="key4">Engine:</span> 6.2L supercharged HEMI V8</p>
+                <p><span class="key5">Cost:</span> $60,000 to $90,000+</p>
+                <p><span class="key6">Performance:</span> Straight-line speed and acceleration</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The Corvette, a legendary American icon, epitomizes performance and style with its sleek design and powerful V8 engine, offering a thrilling driving experience like no other. With its heritage of speed and innovation, the Corvette continues to captivate enthusiasts worldwide, embodying the spirit of automotive excellence.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A quintessential American muscle car that commands respect with its bold presence and ferocious HEMI V8 engine. With its unmistakable retro-inspired design and tire-shredding performance, the Challenger SRT embodies the spirit of raw power and adrenaline-fueled excitement. Whether on the drag strip or cruising the streets, this iconic muscle car delivers an unrivaled driving experience that stirs the soul and leaves a lasting impression wherever it roams.</p>
     </div>
 
-    <!-- R35 GTR -->
+    <!-- MUSTANG -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="R35 pic" height="300px">
+                <img src="./pics/Muscle/Mustang.jpg" alt="Mustang pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Nissan</p>
-                <p><span class="key2">Model:</span> R35 GT-R</p>
-                <p><span class="key3">Year:</span> Introduced in 2007, various iterations up to present</p>
-                <p><span class="key4">Engine:</span> Twin-turbocharged V6</p>
-                <p><span class="key5">Cost:</span> $100,000 to $200,000+</p>
-                <p><span class="key6">Performance:</span> Exceptional acceleration, 0-60 mph in under 3s</p>
+                <p><span class="key1">Brand:</span> Ford</p>
+                <p><span class="key2">Model:</span> Mustang</p>
+                <p><span class="key3">Year:</span> Introduced in 1964, various iterations up to present</p>
+                <p><span class="key4">Engine:</span> Turbocharged four-cylinder, V6 and V8</p>
+                <p><span class="key5">Cost:</span> $30,000 to $70,000+</p>
+                <p><span class="key6">Performance:</span> Strong acceleration, iconic muscle car styling</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The R35 GT-R stands as a testament to Japanese automotive ingenuity, blending futuristic design cues with relentless V6 power to redefine the supercar landscape. With its iconic presence and uncompromising performance, the GT-R continues to captivate enthusiasts worldwide, symbolizing a fusion of innovation and raw driving exhilaration.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; An enduring symbol of American muscle, blending timeless design with exhilarating performance and a legendary V8 engine. With its iconic silhouette and thrilling power delivery, the Mustang embodies the spirit of freedom and adventure on the open road. Whether roaring down the highway or conquering the racetrack, every drive in a Mustang is a celebration of automotive heritage and the pursuit of driving excellence.</p>
     </div>
 
-    <!-- SUPRA -->
+    <!-- PONTIAC GTO -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/supra.jpg" alt="Supra pic" height="300px">
+                <img src="./pics/Muscle/Pontiac GTO.jpg" alt="Supra pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Toyota</p>
-                <p><span class="key2">Model:</span> GR Supra</p>
-                <p><span class="key3">Year:</span> Reintroduced in 2019 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged inline-six cylinder</p>
-                <p><span class="key5">Cost:</span> $40,000 to $60,000+</p>
-                <p><span class="key6">Performance:</span> Agile handling, 0-60 mph in under 4s</p>
+                <p><span class="key1">Brand:</span> Pontiac</p>
+                <p><span class="key2">Model:</span> GTO</p>
+                <p><span class="key3">Year:</span> 1964 - 1974, later revived on 2004 - 2006</p>
+                <p><span class="key4">Engine:</span> 6.4L V8 in classic, LS1 or LS2 V8 - new</p>
+                <p><span class="key5">Cost:</span> $20,000 to $40,000+</p>
+                <p><span class="key6">Performance:</span> Muscular styling, Impressive straight-line speed</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The GR Supra embodies Toyota's racing legacy, marrying sleek aesthetics with turbocharged power to deliver an electrifying driving experience. With its lineage rooted in motorsport prowess and cutting-edge technology, the Supra redefines the sports car genre, captivating drivers with its dynamic performance and unmistakable presence on the road.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A classic American legend that commands attention with its iconic design and formidable V8 powerplant. With its timeless muscle car styling and exhilarating performance, the GTO symbolizes the golden era of American automotive ingenuity. Whether tearing up the streets or cruising the boulevard, every moment behind the wheel of a GTO is a nostalgic journey back to the glory days of pure, unbridled horsepower and unmatched driving excitement.</p>
     </div>
 
-    <!-- REVUELTO -->
+    <!-- SHELBY -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Revuelto.jpeg" alt="Ruvuelto pic" height="300px">
+                <img src="./pics/Muscle/Shelby GT 350.jpg" alt="Shelby pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Lamboghini</p>
-                <p><span class="key2">Model:</span> Lamborghini</p>
-                <p><span class="key3">Year:</span> 2023 - Present</p>
-                <p><span class="key4">Engine:</span> 6.5 L V12 Electric</p>
-                <p><span class="key5">Cost:</span> $608,358 avg</p>
-                <p><span class="key6">Performance:</span> Agile handling, high top speed capabilities</p>
+                <p><span class="key1">Brand:</span> Shelby</p>
+                <p><span class="key2">Model:</span> GT350</p>
+                <p><span class="key3">Year:</span> 1965 - Present</p>
+                <p><span class="key4">Engine:</span> 5.2L Voodoo V8 in recent models</p>
+                <p><span class="key5">Cost:</span> $50,000 to $70,000+</p>
+                <p><span class="key6">Performance:</span> Renowned for its track-focused performance</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A breathtaking fusion of Italian craftsmanship and raw power, this supercar commands attention with its striking design and exhilarating V10 engine. From its aerodynamic curves to its spine-tingling exhaust note, the Revuelto epitomizes automotive artistry, offering a thrilling driving experience that ignites the senses and leaves a lasting impression on all who behold it.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A true American icon, meticulously crafted for exhilarating performance and timeless style. With its legendary V8 engine, precision handling, and distinctive Shelby design cues, the GT350 delivers an unforgettable driving experience that pays homage to its racing heritage. From its aggressive stance to its thrilling exhaust.</p>
     </div>
 
-    <!-- PORSCHE -->
+    <!-- THUNDERBIRD -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Porsche 718.jpg" alt="Porsche pic" height="300px">
+                <img src="./pics/Muscle/Thunder bird.jpg" alt="Thunderbird pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Porsche</p>
-                <p><span class="key2">Model:</span> 718</p>
-                <p><span class="key3">Year:</span> 2016 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged flat-four cylinder</p>
-                <p><span class="key5">Cost:</span> $60,000 to $100,000+</p>
-                <p><span class="key6">Performance:</span> Strong acceleration, 0-60 mph in under 5s</p>
+                <p><span class="key1">Brand:</span> Ford</p>
+                <p><span class="key2">Model:</span> Thunderbird</p>
+                <p><span class="key3">Year:</span> 1955 - 2005</p>
+                <p><span class="key4">Engine:</span> V8 in classics and V6  in later generations</p>
+                <p><span class="key5">Cost:</span> $10,000 to $30,000+</p>
+                <p><span class="key6">Performance:</span> Designed as a luxury cruiser</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A true embodiment of precision engineering and iconic design, this sports car captivates with its dynamic performance and timeless silhouette. With its turbocharged powerplant and impeccable handling, the 718 delivers an exhilarating driving experience that defines the essence of Porsche's racing heritage. From the track to the open road, every moment behind the wheel of the 718 is a testament to automotive excellence and passion for driving</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A classic symbol of American automotive innovation, blending timeless design with luxurious comfort and powerful performance. With its iconic silhouette and refined interior, the Thunderbird embodies the essence of 1950s and 1960s cruising culture. Whether gliding down the highway or parked at a roadside diner, every journey in a Thunderbird is a nostalgic tribute to the golden age of American motoring, where style and sophistication reigned supreme.</p>
     </div>
 
     
