--- a/Tools/SUV.html
+++ b/Tools/SUV.html
@@ -52,7 +52,7 @@
         </div>
         <div class="specs">
             <h3>Design</h3>
-            <p>Robust, versatile, commanding presence</p>
+            <p>Robust, commanding presence</p>
         </div>
         <div class="specs">
             <h3>Technology</h3>
@@ -60,7 +60,7 @@
         </div>
         <div class="specs">
             <h3>Handling</h3>
-            <p>Stable, with good ground clearance</p>
+            <p>Stable, good ground clearance</p>
         </div>
         <div class="specs">
             <h3>Fuel efficiency</h3>
@@ -78,99 +78,99 @@
     
     <hr>
 
-    <!-- CORVETTE -->
+    <!-- ESCALADE -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="300px">
+                <img src="./pics/SUV/Cadillac Escalade.jpg" alt="Cadillac pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Chevrolet</p>
-                <p><span class="key2">Model:</span> Corvette</p>
-                <p><span class="key3">Year:</span> 1953 - Present</p>
-                <p><span class="key4">Engine:</span> Powerful V8</p>
-                <p><span class="key5">Cost:</span> $60,000 to over $100,000</p>
-                <p><span class="key6">Performance:</span> Impressive acceleration, top speed, and handling</p>
+                <p><span class="key1">Brand:</span> Cadillac</p>
+                <p><span class="key2">Model:</span> Escalade</p>
+                <p><span class="key3">Year:</span> Introduced in 1999, various iterations up to present</p>
+                <p><span class="key4">Engine:</span> V8 engines, strong performance and towing capabilities</p>
+                <p><span class="key5">Cost:</span> $75,000 to $100,000+</p>
+                <p><span class="key6">Performance:</span> Offers strong acceleration and confident handling</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The Corvette, a legendary American icon, epitomizes performance and style with its sleek design and powerful V8 engine, offering a thrilling driving experience like no other. With its heritage of speed and innovation, the Corvette continues to captivate enthusiasts worldwide, embodying the spirit of automotive excellence.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A bold icon of luxury and power, commanding attention with its commanding presence and unmistakable style. With its imposing grille and refined details, the Escalade exudes sophistication and prestige. From its spacious interior adorned with premium materials to its advanced technology features, every aspect of the Escalade is designed to elevate the driving experience. Whether cruising down city streets or navigating rugged terrain, the Escalade offers unparalleled comfort, performance, and versatility, making it the ultimate expression of American luxury.</p>
     </div>
 
-    <!-- R35 GTR -->
+    <!-- BLAZER -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="R35 pic" height="300px">
+                <img src="./pics/SUV/Chevrolet Blazer.jpg" alt="Chevrolet pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Nissan</p>
-                <p><span class="key2">Model:</span> R35 GT-R</p>
-                <p><span class="key3">Year:</span> Introduced in 2007, various iterations up to present</p>
-                <p><span class="key4">Engine:</span> Twin-turbocharged V6</p>
-                <p><span class="key5">Cost:</span> $100,000 to $200,000+</p>
-                <p><span class="key6">Performance:</span> Exceptional acceleration, 0-60 mph in under 3s</p>
+                <p><span class="key1">Brand:</span> Cadillac</p>
+                <p><span class="key2">Model:</span> Blazer</p>
+                <p><span class="key3">Year:</span> Introduced in 1969, various iterations up to present</p>
+                <p><span class="key4">Engine:</span> Turbocharged four-cylinder and V6 engines</p>
+                <p><span class="key5">Cost:</span> $30,000 to $45,000+</p>
+                <p><span class="key6">Performance:</span> Known for its stylish design, comfortable ride</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The R35 GT-R stands as a testament to Japanese automotive ingenuity, blending futuristic design cues with relentless V6 power to redefine the supercar landscape. With its iconic presence and uncompromising performance, the GT-R continues to captivate enthusiasts worldwide, symbolizing a fusion of innovation and raw driving exhilaration.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A modern interpretation of an American classic, blending bold design with versatile capability for today's adventurers. With its distinctive styling cues and rugged demeanor, the Blazer commands attention on and off the road. From its spacious interior equipped with advanced technology to its powerful engine options, every aspect of the Blazer is engineered to enhance the driving experience. Whether exploring urban landscapes or tackling outdoor trails, the Chevrolet Blazer offers a perfect blend of style, performance, and practicality, making it the ideal companion for any journey.</p>
     </div>
 
-    <!-- SUPRA -->
+    <!-- DEFENDER -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/supra.jpg" alt="Supra pic" height="300px">
+                <img src="./pics/SUV/Land Rover Defender.jpg" alt="Defender pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Toyota</p>
-                <p><span class="key2">Model:</span> GR Supra</p>
-                <p><span class="key3">Year:</span> Reintroduced in 2019 - Present</p>
+                <p><span class="key1">Brand:</span> Land Rover</p>
+                <p><span class="key2">Model:</span> Defender</p>
+                <p><span class="key3">Year:</span> 1983 - 2016, Reintroduced - 2020</p>
                 <p><span class="key4">Engine:</span> Turbocharged inline-six cylinder</p>
-                <p><span class="key5">Cost:</span> $40,000 to $60,000+</p>
-                <p><span class="key6">Performance:</span> Agile handling, 0-60 mph in under 4s</p>
+                <p><span class="key5">Cost:</span> $50,000 to $80,000+</p>
+                <p><span class="key6">Performance:</span>  Off-road capabilities, rugged durability</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The GR Supra embodies Toyota's racing legacy, marrying sleek aesthetics with turbocharged power to deliver an electrifying driving experience. With its lineage rooted in motorsport prowess and cutting-edge technology, the Supra redefines the sports car genre, captivating drivers with its dynamic performance and unmistakable presence on the road.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A legendary symbol of adventure and rugged capability, embodying the spirit of exploration in every journey. With its iconic design and unmatched off-road prowess, the Defender commands respect on any terrain. From its robust construction to its advanced technology features, every detail of the Defender is engineered for durability and performance. Whether traversing rugged landscapes or navigating city streets, the Land Rover Defender is the ultimate companion for those who seek adventure without compromise, inspiring confidence in every expedition.</p>
     </div>
 
-    <!-- REVUELTO -->
+    <!-- Range Rover -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Revuelto.jpeg" alt="Ruvuelto pic" height="300px">
+                <img src="./pics/SUV/Range Rover.jpg" alt="RangeRover pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Lamboghini</p>
-                <p><span class="key2">Model:</span> Lamborghini</p>
-                <p><span class="key3">Year:</span> 2023 - Present</p>
-                <p><span class="key4">Engine:</span> 6.5 L V12 Electric</p>
-                <p><span class="key5">Cost:</span> $608,358 avg</p>
+                <p><span class="key1">Brand:</span> Land Rover</p>
+                <p><span class="key2">Model:</span> Range Rover</p>
+                <p><span class="key3">Year:</span> Introduced in 1970, various iterations up to present</p>
+                <p><span class="key4">Engine:</span> Turbocharged inline-six, V8, hybrid powertrains</p>
+                <p><span class="key5">Cost:</span> $90,000 to $200,000+</p>
                 <p><span class="key6">Performance:</span> Agile handling, high top speed capabilities</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A breathtaking fusion of Italian craftsmanship and raw power, this supercar commands attention with its striking design and exhilarating V10 engine. From its aerodynamic curves to its spine-tingling exhaust note, the Revuelto epitomizes automotive artistry, offering a thrilling driving experience that ignites the senses and leaves a lasting impression on all who behold it.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The epitome of luxury and versatility, combining refined elegance with uncompromising off-road capability. With its iconic design and superior craftsmanship, the Range Rover exudes prestige and sophistication on every journey. From its opulent interior featuring sumptuous materials to its advanced technology and legendary four-wheel-drive system, the Range Rover offers a driving experience unlike any other. Whether navigating urban landscapes or conquering rugged terrain, the Range Rover sets the standard for luxury SUVs, providing unparalleled comfort, performance, and refinement for discerning adventurers.</p>
     </div>
 
-    <!-- PORSCHE -->
+    <!-- Sequoia -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Porsche 718.jpg" alt="Porsche pic" height="300px">
+                <img src="./pics/SUV/Toyota Sequoia.jpg" alt="Sequoia pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Porsche</p>
-                <p><span class="key2">Model:</span> 718</p>
-                <p><span class="key3">Year:</span> 2016 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged flat-four cylinder</p>
-                <p><span class="key5">Cost:</span> $60,000 to $100,000+</p>
-                <p><span class="key6">Performance:</span> Strong acceleration, 0-60 mph in under 5s</p>
+                <p><span class="key1">Brand:</span> Toyota</p>
+                <p><span class="key2">Model:</span> Sequoia</p>
+                <p><span class="key3">Year:</span> 2020 - Present</p>
+                <p><span class="key4">Engine:</span> Powerful V8 engine,</p>
+                <p><span class="key5">Cost:</span> $50,000 to $70,000+</p>
+                <p><span class="key6">Performance:</span> Suitable for both city driving and off-road adventures</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A true embodiment of precision engineering and iconic design, this sports car captivates with its dynamic performance and timeless silhouette. With its turbocharged powerplant and impeccable handling, the 718 delivers an exhilarating driving experience that defines the essence of Porsche's racing heritage. From the track to the open road, every moment behind the wheel of the 718 is a testament to automotive excellence and passion for driving</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A rugged yet refined SUV that stands tall in the world of adventure, offering spacious comfort and dependable performance. With its robust design and powerful engine options, the Sequoia is ready to tackle any terrain with confidence. From its versatile interior with ample cargo space to its advanced safety features and towing capabilities, every aspect of the Sequoia is designed for adventure seekers and families alike. Whether embarking on a road trip or venturing off the beaten path, the Toyota Sequoia is the perfect companion for all your journeys, providing reliability and comfort wherever the road may lead.</p>
     </div>
 
     
