--- a/Tools/Sedan.html
+++ b/Tools/Sedan.html
@@ -78,80 +78,80 @@
     
     <hr>
 
-    <!-- CORVETTE -->
+    <!-- AUDI A$ -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/corvette.jpg" alt="Corvette pic" height="300px">
+                <img src="./pics/Sedan/Audi A4.jpg" alt="Audi pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Chevrolet</p>
-                <p><span class="key2">Model:</span> Corvette</p>
-                <p><span class="key3">Year:</span> 1953 - Present</p>
-                <p><span class="key4">Engine:</span> Powerful V8</p>
-                <p><span class="key5">Cost:</span> $60,000 to over $100,000</p>
-                <p><span class="key6">Performance:</span> Impressive acceleration, top speed, and handling</p>
+                <p><span class="key1">Brand:</span> Audi</p>
+                <p><span class="key2">Model:</span> A4</p>
+                <p><span class="key3">Year:</span> 1994 - Present</p>
+                <p><span class="key4">Engine:</span> Powerful V6 engines </p>
+                <p><span class="key5">Cost:</span> $40,000 to over $60,000</p>
+                <p><span class="key6">Performance:</span> Known for its balanced handling, refined ride quality</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The Corvette, a legendary American icon, epitomizes performance and style with its sleek design and powerful V8 engine, offering a thrilling driving experience like no other. With its heritage of speed and innovation, the Corvette continues to captivate enthusiasts worldwide, embodying the spirit of automotive excellence.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A sleek embodiment of German engineering prowess, seamlessly merging luxury, performance, and cutting-edge technology. With its refined exterior lines and meticulously crafted interior, the A4 exudes sophistication at every turn. From its responsive handling to its efficient yet powerful engine options, the A4 offers a dynamic driving experience tailored to the discerning driver. Whether navigating city streets or cruising the open highway, the Audi A4 sets the standard for modern elegance and driving pleasure.</p>
     </div>
 
-    <!-- R35 GTR -->
+    <!-- BENZ C-CLASS -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/R35 GTR.jpg" alt="R35 pic" height="300px">
+                <img src="./pics/Sedan/Benz C-Class.jpg" alt="Benz pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Nissan</p>
-                <p><span class="key2">Model:</span> R35 GT-R</p>
-                <p><span class="key3">Year:</span> Introduced in 2007, various iterations up to present</p>
-                <p><span class="key4">Engine:</span> Twin-turbocharged V6</p>
-                <p><span class="key5">Cost:</span> $100,000 to $200,000+</p>
-                <p><span class="key6">Performance:</span> Exceptional acceleration, 0-60 mph in under 3s</p>
+                <p><span class="key1">Brand:</span> Benz</p>
+                <p><span class="key2">Model:</span> C-Class</p>
+                <p><span class="key3">Year:</span> Introduced in 1993, various iterations up to present</p>
+                <p><span class="key4">Engine:</span> Turbocharged four-cylinder, V6 engines in higher trims</p>
+                <p><span class="key5">Cost:</span> $40,000 to $70,000+</p>
+                <p><span class="key6">Performance:</span> Offers a balance of luxury and sportiness</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The R35 GT-R stands as a testament to Japanese automotive ingenuity, blending futuristic design cues with relentless V6 power to redefine the supercar landscape. With its iconic presence and uncompromising performance, the GT-R continues to captivate enthusiasts worldwide, symbolizing a fusion of innovation and raw driving exhilaration.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; An epitome of luxury and refinement, where elegance meets performance in perfect harmony. With its sleek lines and opulent interior, the C-Class exudes sophistication and class. Boasting advanced technology and impeccable craftsmanship, every detail of the C-Class is meticulously designed to offer a driving experience that is both exhilarating and indulgent. From its powerful engine options to its smooth ride quality, the C-Class redefines the standard for luxury sedans, ensuring every journey is a celebration of automotive excellence.</p>
     </div>
 
-    <!-- SUPRA -->
+    <!-- BMW 7 SERIES -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/supra.jpg" alt="Supra pic" height="300px">
+                <img src="./pics/Sedan/BMW 7 Series.jpg" alt="BMW pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Toyota</p>
-                <p><span class="key2">Model:</span> GR Supra</p>
-                <p><span class="key3">Year:</span> Reintroduced in 2019 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged inline-six cylinder</p>
-                <p><span class="key5">Cost:</span> $40,000 to $60,000+</p>
-                <p><span class="key6">Performance:</span> Agile handling, 0-60 mph in under 4s</p>
+                <p><span class="key1">Brand:</span> BMW</p>
+                <p><span class="key2">Model:</span> 7 Series</p>
+                <p><span class="key3">Year:</span> Introduced in 1977 - Present</p>
+                <p><span class="key4">Engine:</span> Powerful inline-six, V8, or V12 engines</p>
+                <p><span class="key5">Cost:</span> $80,000 to $150,000+</p>
+                <p><span class="key6">Performance:</span> Luxurious interior, advanced technology features</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; The GR Supra embodies Toyota's racing legacy, marrying sleek aesthetics with turbocharged power to deliver an electrifying driving experience. With its lineage rooted in motorsport prowess and cutting-edge technology, the Supra redefines the sports car genre, captivating drivers with its dynamic performance and unmistakable presence on the road.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A pinnacle of luxury and innovation, where opulence meets advanced technology for an unrivaled driving experience. With its striking design and exquisite craftsmanship, the 7 Series commands attention on the road. From its powerful engine options to its sophisticated interior amenities, every aspect of the 7 Series is meticulously engineered for ultimate comfort and performance. Whether chauffeuring executives or embarking on a solo adventure, the BMW 7 Series sets the standard for luxury sedans, redefining what it means to travel in style.</p>
     </div>
 
-    <!-- REVUELTO -->
+    <!-- LEXUS LS -->
 
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Revuelto.jpeg" alt="Ruvuelto pic" height="300px">
+                <img src="./pics/Sedan/Lexus LS.jpg" alt="Lexus pic" height="300px">
             </div>
             <div class="showdetails">
-                <p><span class="key1">Brand:</span> Lamboghini</p>
-                <p><span class="key2">Model:</span> Lamborghini</p>
-                <p><span class="key3">Year:</span> 2023 - Present</p>
-                <p><span class="key4">Engine:</span> 6.5 L V12 Electric</p>
-                <p><span class="key5">Cost:</span> $608,358 avg</p>
-                <p><span class="key6">Performance:</span> Agile handling, high top speed capabilities</p>
+                <p><span class="key1">Brand:</span> Lexus</p>
+                <p><span class="key2">Model:</span> LS</p>
+                <p><span class="key3">Year:</span> 1989 - Present</p>
+                <p><span class="key4">Engine:</span> Smooth and powerful V6 or V8 engines</p>
+                <p><span class="key5">Cost:</span> $70,000 to $100,000+</p>
+                <p><span class="key6">Performance:</span> luxurious & quiet ride, high-quality interior materials</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A breathtaking fusion of Italian craftsmanship and raw power, this supercar commands attention with its striking design and exhilarating V10 engine. From its aerodynamic curves to its spine-tingling exhaust note, the Revuelto epitomizes automotive artistry, offering a thrilling driving experience that ignites the senses and leaves a lasting impression on all who behold it.</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A testament to luxury and precision craftsmanship, where elegance harmonizes with cutting-edge technology for an unparalleled driving experience. With its sleek, aerodynamic design and meticulously crafted interior, the LS embodies the pinnacle of refinement. From its whisper-quiet cabin to its powerful yet efficient engine options, every detail of the LS is designed to elevate the journey. Whether navigating city streets or cruising the open highway, the Lexus LS delivers a serene and indulgent driving experience that exceeds expectations, redefining the standard for luxury sedans.</p>
     </div>
 
     <!-- PORSCHE -->
@@ -159,18 +159,18 @@
     <div class="showcase">
         <div class="showcar">
             <div class="showimg">
-                <img src="./pics/Sports/Porsche 718.jpg" alt="Porsche pic" height="300px">
+                <img src="./pics/Sedan/Porsche Taycan.jpg" alt="Porsche pic" height="300px">
             </div>
             <div class="showdetails">
                 <p><span class="key1">Brand:</span> Porsche</p>
-                <p><span class="key2">Model:</span> 718</p>
-                <p><span class="key3">Year:</span> 2016 - Present</p>
-                <p><span class="key4">Engine:</span> Turbocharged flat-four cylinder</p>
-                <p><span class="key5">Cost:</span> $60,000 to $100,000+</p>
-                <p><span class="key6">Performance:</span> Strong acceleration, 0-60 mph in under 5s</p>
+                <p><span class="key2">Model:</span> Taycan</p>
+                <p><span class="key3">Year:</span> Introduced in 2019</p>
+                <p><span class="key4">Engine:</span> Electric motors (typically dual-motor setup)</p>
+                <p><span class="key5">Cost:</span> $80,000 to $200,000+</p>
+                <p><span class="key6">Performance:</span> Known for its impressive electric performance</p>
             </div>
         </div>
-        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A true embodiment of precision engineering and iconic design, this sports car captivates with its dynamic performance and timeless silhouette. With its turbocharged powerplant and impeccable handling, the 718 delivers an exhilarating driving experience that defines the essence of Porsche's racing heritage. From the track to the open road, every moment behind the wheel of the 718 is a testament to automotive excellence and passion for driving</p>
+        <p class="showdesc"> &emsp;&emsp;&emsp;&emsp; A groundbreaking fusion of electrifying performance and iconic Porsche design, setting new standards in the world of electric vehicles. With its striking silhouette and unparalleled engineering, the Taycan delivers exhilarating acceleration and precise handling. From its cutting-edge technology to its luxurious interior, every aspect of the Taycan is crafted to elevate the electric driving experience. Whether conquering corners on the track or cruising city streets, the Taycan embodies Porsche's commitment to innovation and driving excellence, ushering in a new era of electric mobility.</p>
     </div>
 
     
