--- a/Tools/Sports.html
+++ b/Tools/Sports.html
@@ -144,8 +144,8 @@
             </div>
             <div class="showdetails">
                 <p><span class="key1">Brand:</span> Lamboghini</p>
-                <p><span class="key2">Model:</span> Lamborghini</p>
-                <p><span class="key3">Year:</span> 2023 - Present</p>
+                <p><span class="key2">Model:</span> Revuelto</p>
+                <p><span class="key3">Year:</span> Introduced in 2023</p>
                 <p><span class="key4">Engine:</span> 6.5 L V12 Electric</p>
                 <p><span class="key5">Cost:</span> $608,358 avg</p>
                 <p><span class="key6">Performance:</span> Agile handling, high top speed capabilities</p>
